// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericField Component GenericField renders 1`] = `
<div>
  <div
    class="fieldGroup"
  />
</div>
`;

exports[`GenericField Component GenericField renders inline with error message, not displaying the error 1`] = `
<div>
  <div
    class="fieldGroup inline"
  />
</div>
`;

exports[`GenericField Component GenericField renders with children 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="CHILD-TEST"
    />
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="message"
    >
      <div
        class="error field-error"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message and helper text, displaying only error 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="message"
    >
      <div
        class="error field-error"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with error message in read only, not displaying the error 1`] = `
<div>
  <div
    class="fieldGroup"
  />
</div>
`;

exports[`GenericField Component GenericField renders with error message in read only, not displaying the error, only displaying the helper text 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="message"
    >
      <div
        class="helper"
      >
        HELPER-TEXT
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with helper text and counter 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="message"
    >
      <div
        class="helper"
      >
        HELPER-TEXT
      </div>
      <div
        class="counter"
      >
        5 / 10
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with highlight in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  />
</div>
`;

exports[`GenericField Component GenericField renders with highlight not in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  />
</div>
`;

exports[`GenericField Component GenericField renders with invertInputDescription 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="message inverted"
    >
      <div
        class="helper"
      >
        HELPER
      </div>
    </div>
    CHILD
  </div>
</div>
`;

exports[`GenericField Component GenericField renders with invertInputDescription 2`] = `
<div>
  <div
    class="fieldGroup"
  >
    CHILD
    <div
      class="message"
    >
      <div
        class="helper"
      >
        HELPER
      </div>
    </div>
  </div>
</div>
`;
